Add Docker and make CORS/props configurable
Add Docker support and make runtime configuration environment-driven.\n\n- Add .dockerignore and a multi-stage Dockerfile (Gradle build + Eclipse Temurin runtime) to build and run the Spring Boot JAR.\n- Update CorsConfig to read comma-separated allowed origins from cors.allowed-origins property (defaults to http://localhost:4200) and trim/filter entries.\n- Replace hard-coded secrets and literals in application.properties with environment-backed placeholders (server.port, SMTP, Cloudinary, Mercadopago, management port, CORS, and simplejavamail debug), improving security and deployability.\n\nThese changes enable safer deployments (no plaintext secrets in repo), configurable CORS for multiple origins, and containerized builds for CI/CD or hosting platforms.